[package]
name = "custrig"
version = "0.1.0"
edition = "2024"

[dependencies]
rig-core = "0.21.0"
serde = {version ="1.0.228", features = ["derive"]}
serde_json = "1.0.145"
regex = "1.10"
reqwest = "0.12.23"
tokio = {version = "1.0.1",features=["full"]}

[profile.release]
opt-level='z'
lto = true
codegen-units=1
panic='abort'